--- a/BerrasCinema/Views/Orders/Create.cshtml
+++ b/BerrasCinema/Views/Orders/Create.cshtml
@@ -1,12 +1,10 @@
 ﻿@model BerrasCinema.Models.Order
 
 @{
-    ViewData["Title"] = "Create";
+    ViewData["Title"] = "Create Order";
 }
 
-<h1>Create</h1>
-
-<h4>Order</h4>
+<h1>@ViewData["Title"]</h1>
 <hr />
 <div class="row">
     <div class="col-md-4">
