--- a/BerrasCinema/Views/Shared/_Layout.cshtml
+++ b/BerrasCinema/Views/Shared/_Layout.cshtml
@@ -22,7 +22,7 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Movies" asp-action="Index">Available Movies</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Orders" asp-action="Index">Book Tickets</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Orders" asp-action="Create">Book Tickets</a>
                         </li>
                     </ul>
                 </div>
