--- a/BerrasCinema/Views/Movies/Details.cshtml
+++ b/BerrasCinema/Views/Movies/Details.cshtml
@@ -16,8 +16,21 @@
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.MovieName)
         </dd>
+        <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.MovieStart)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.MovieStart)
+        </dd>
+        <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.MovieDuration)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.MovieDuration)
+        </dd>
     </dl>
 </div>
 <div>
+    <a asp-action="Edit" asp-route-id="@Model.MovieID">Edit</a> |
     <a asp-action="Index">Back to List</a>
 </div>
