--- a/BerrasCinema/Views/Movies/Create.cshtml
+++ b/BerrasCinema/Views/Movies/Create.cshtml
@@ -18,6 +18,11 @@
                 <span asp-validation-for="MovieName" class="text-danger"></span>
             </div>
             <div class="form-group">
+                <label asp-for="SeatsLeft" class="control-label"></label>
+                <input asp-for="SeatsLeft" class="form-control" />
+                <span asp-validation-for="SeatsLeft" class="text-danger"></span>
+            </div>
+            <div class="form-group">
                 <label asp-for="MovieStart" class="control-label"></label>
                 <input asp-for="MovieStart" class="form-control" />
                 <span asp-validation-for="MovieStart" class="text-danger"></span>
