--- a/BerrasCinema/Views/Movies/Delete.cshtml
+++ b/BerrasCinema/Views/Movies/Delete.cshtml
@@ -18,6 +18,12 @@
             @Html.DisplayFor(model => model.MovieName)
         </dd>
         <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.SeatsLeft)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.SeatsLeft)
+        </dd>
+        <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.MovieStart)
         </dt>
         <dd class = "col-sm-10">
