--- a/BerrasCinema/Views/Movies/Index.cshtml
+++ b/BerrasCinema/Views/Movies/Index.cshtml
@@ -16,6 +16,9 @@
                 @Html.DisplayNameFor(model => model.MovieName)
             </th>
             <th>
+                @Html.DisplayNameFor(model => model.SeatsLeft)
+            </th>
+            <th>
                 @Html.DisplayNameFor(model => model.MovieStart)
             </th>
             <th>
@@ -29,6 +32,9 @@
         <tr>
             <td>
                 @Html.DisplayFor(modelItem => item.MovieName)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.SeatsLeft)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.MovieStart)
