--- a/BerrasCinema/Views/Orders/Create.cshtml
+++ b/BerrasCinema/Views/Orders/Create.cshtml
@@ -1,43 +1,53 @@
 ﻿@model BerrasCinema.Models.Order
 
 @{
-    ViewData["Title"] = "Create Order";
+    ViewData["Title"] = "Create";
 }
 
-<h1>@ViewData["Title"]</h1>
+<h1>Create</h1>
+
+<h4>Order</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
         <form asp-action="Create">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-group">
-                <label asp-for="amountOfTrickets" class="control-label"></label>
-                <input asp-for="amountOfTrickets" class="form-control" />
-                <span asp-validation-for="amountOfTrickets" class="text-danger"></span>
+            <div class="text-danger">
+
             </div>
             <div class="form-group">
-                <label asp-for="CustomerFirstName" class="control-label"></label>
-                <input asp-for="CustomerFirstName" class="form-control" />
-                <span asp-validation-for="CustomerFirstName" class="text-danger"></span>
+                <label asp-for="MovieName" class="control-label"></label>
+                <input asp-for="MovieName" class="form-control" />
+                <span asp-validation-for="MovieName" class="text-danger"></span>
+                @*@@Html.DropDownListFor(model => model.Movie, ViewBag.MovieList as SelectList, new { @class = "form-control" })*@
             </div>
-            <div class="form-group">
-                <label asp-for="CustomerLastName" class="control-label"></label>
-                <input asp-for="CustomerLastName" class="form-control" />
-                <span asp-validation-for="CustomerLastName" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="CustomerEmail" class="control-label"></label>
-                <input asp-for="CustomerEmail" class="form-control" />
-                <span asp-validation-for="CustomerEmail" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="CustomerConfirmEmail" class="control-label"></label>
-                <input asp-for="CustomerConfirmEmail" class="form-control" />
-                <span asp-validation-for="CustomerConfirmEmail" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
-            </div>
+                <div class="form-group">
+                    <label asp-for="AmmountOfTickets" class="control-label"></label>
+                    <input asp-for="AmmountOfTickets" class="form-control" />
+                    <span asp-validation-for="AmmountOfTickets" class="text-danger"></span>
+                </div>
+                <div class="form-group">
+                    <label asp-for="FirstName" class="control-label"></label>
+                    <input asp-for="FirstName" class="form-control" />
+                    <span asp-validation-for="FirstName" class="text-danger"></span>
+                </div>
+                <div class="form-group">
+                    <label asp-for="LastName" class="control-label"></label>
+                    <input asp-for="LastName" class="form-control" />
+                    <span asp-validation-for="LastName" class="text-danger"></span>
+                </div>
+                <div class="form-group">
+                    <label asp-for="Email" class="control-label"></label>
+                    <input asp-for="Email" class="form-control" />
+                    <span asp-validation-for="Email" class="text-danger"></span>
+                </div>
+                <div class="form-group">
+                    <label asp-for="ConfirmEmail" class="control-label"></label>
+                    <input asp-for="ConfirmEmail" class="form-control" />
+                    <span asp-validation-for="ConfirmEmail" class="text-danger"></span>
+                </div>
+                <div class="form-group">
+                    <input type="submit" value="Create" class="btn btn-primary" />
+                </div>
         </form>
     </div>
 </div>
