--- a/BerrasCinema/Views/Orders/Index.cshtml
+++ b/BerrasCinema/Views/Orders/Index.cshtml
@@ -1,48 +1,59 @@
 ﻿@model IEnumerable<BerrasCinema.Models.Order>
 
 @{
-    ViewData["Title"] = "Order Tickets";
+    ViewData["Title"] = "Index";
 }
 
+<h1>Index</h1>
 
-<div>
-    <h1>Order Confirmed</h1>
-    <hr />
-    <dl class="row">
-        <dt class="col-sm-2">
-            <p>OrderID:</p>
-        </dt>
-        <dd class="col-sm-10">
-            @Model.LastOrDefault().BookingID
-        </dd>
-        <dt class="col-sm-2">
-            <p>Ticket's:</p>
-        </dt>
-        <dd class="col-sm-10">
-            @Model.LastOrDefault().amountOfTrickets
-        </dd>
-        <dt class="col-sm-2">
-            <p>First Name:</p>
-        </dt>
-        <dd class="col-sm-10">
-            @Model.LastOrDefault().CustomerFirstName
-        </dd>
-        <dt class="col-sm-2">
-            <p>Last Name:</p>
-        </dt>
-        <dd class="col-sm-10">
-            @Model.LastOrDefault().CustomerLastName
-        </dd>
-        <dt class="col-sm-2">
-            <p>Email:</p>
-        </dt>
-        <dd class="col-sm-10">
-            @Model.LastOrDefault().CustomerEmail
-        </dd>
-    </dl>
-</div>
-<div>
-    <a asp-action="Edit" asp-route-id="@Model.LastOrDefault().BookingID">Edit</a> |
-    <a asp-action="Index">Back to List</a>
-</div>
-
+<p>
+    <a asp-action="Create">Create New</a>
+</p>
+<table class="table">
+    <thead>
+        <tr>
+            <th>
+                @Html.DisplayNameFor(model => model.AmmountOfTickets)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.FirstName)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.LastName)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Email)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.ConfirmEmail)
+            </th>
+            <th></th>
+        </tr>
+    </thead>
+    <tbody>
+@foreach (var item in Model) {
+        <tr>
+            <td>
+                @Html.DisplayFor(modelItem => item.AmmountOfTickets)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.FirstName)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.LastName)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Email)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.ConfirmEmail)
+            </td>
+            <td>
+                <a asp-action="Edit" asp-route-id="@item.OrderID">Edit</a> |
+                <a asp-action="Details" asp-route-id="@item.OrderID">Details</a> |
+                <a asp-action="Delete" asp-route-id="@item.OrderID">Delete</a>
+            </td>
+        </tr>
+}
+    </tbody>
+</table>
