--- a/BerrasCinema/Views/Movies/Index.cshtml
+++ b/BerrasCinema/Views/Movies/Index.cshtml
@@ -5,10 +5,6 @@
 }
 
 <h1>Index</h1>
-
-<p>
-    <a asp-action="Create">Create New</a>
-</p>
 <table class="table">
     <thead>
         <tr>
@@ -43,9 +39,7 @@
                 @Html.DisplayFor(modelItem => item.MovieDuration)
             </td>
             <td>
-                <a asp-action="Edit" asp-route-id="@item.MovieID">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.MovieID">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.MovieID">Delete</a>
+                <a asp-action="Details" asp-route-id="@item.MovieID">Details</a> 
             </td>
         </tr>
 }
