--- a/BerrasCinema/Views/Orders/Create.cshtml
+++ b/BerrasCinema/Views/Orders/Create.cshtml
@@ -16,45 +16,45 @@
             </div>
             <div class="form-group">
                 <label asp-for="MovieName" class="control-label"></label>
-                <input asp-for="MovieName" class="form-control" />
+                @*<input asp-for="MovieName" class="form-control" />*@
+
+                @Html.DropDownListFor(model => model.MovieName, ViewBag.MovieList as SelectList, new { @class = "form-control" })
+
                 <span asp-validation-for="MovieName" class="text-danger"></span>
-                @*@@Html.DropDownListFor(model => model.Movie, ViewBag.MovieList as SelectList, new { @class = "form-control" })*@
             </div>
-                <div class="form-group">
-                    <label asp-for="AmmountOfTickets" class="control-label"></label>
-                    <input asp-for="AmmountOfTickets" class="form-control" />
-                    <span asp-validation-for="AmmountOfTickets" class="text-danger"></span>
-                </div>
-                <div class="form-group">
-                    <label asp-for="FirstName" class="control-label"></label>
-                    <input asp-for="FirstName" class="form-control" />
-                    <span asp-validation-for="FirstName" class="text-danger"></span>
-                </div>
-                <div class="form-group">
-                    <label asp-for="LastName" class="control-label"></label>
-                    <input asp-for="LastName" class="form-control" />
-                    <span asp-validation-for="LastName" class="text-danger"></span>
-                </div>
-                <div class="form-group">
-                    <label asp-for="Email" class="control-label"></label>
-                    <input asp-for="Email" class="form-control" />
-                    <span asp-validation-for="Email" class="text-danger"></span>
-                </div>
-                <div class="form-group">
-                    <label asp-for="ConfirmEmail" class="control-label"></label>
-                    <input asp-for="ConfirmEmail" class="form-control" />
-                    <span asp-validation-for="ConfirmEmail" class="text-danger"></span>
-                </div>
-                <div class="form-group">
-                    <input type="submit" value="Create" class="btn btn-primary" />
-                </div>
+            <div class="form-group">
+                <label asp-for="AmmountOfTickets" class="control-label"></label>
+                <input asp-for="AmmountOfTickets" class="form-control" />
+                <span asp-validation-for="AmmountOfTickets" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="FirstName" class="control-label"></label>
+                <input asp-for="FirstName" class="form-control" />
+                <span asp-validation-for="FirstName" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="LastName" class="control-label"></label>
+                <input asp-for="LastName" class="form-control" />
+                <span asp-validation-for="LastName" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="Email" class="control-label"></label>
+                <input asp-for="Email" class="form-control" />
+                <span asp-validation-for="Email" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="ConfirmEmail" class="control-label"></label>
+                <input asp-for="ConfirmEmail" class="form-control" />
+                <span asp-validation-for="ConfirmEmail" class="text-danger"></span>
+            </div>
+            <dd>
+                <a class="btn btn-primary" asp-controller="Home" asp-action="Index">Back to Start</a>
+                <input type="submit" value="Create" class="btn btn-primary" />
+            </dd>
         </form>
     </div>
 </div>
 
-<div>
-    <a asp-action="Index">Back to List</a>
-</div>
 
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
