--- a/BerrasCinema/Views/Orders/Details.cshtml
+++ b/BerrasCinema/Views/Orders/Details.cshtml
@@ -43,6 +43,8 @@
     </dl>
 </div>
 <div>
-    <a asp-action="Edit" asp-route-id="@Model.OrderID">Edit</a> |
-    <a asp-action="Index">Back to List</a>
+    <dd>
+        <a class="btn btn-primary" asp-controller="Home" asp-action="Index">Back to Start</a>
+        <a class="btn btn-primary" asp-action="Edit" asp-route-id="@Model.OrderID">Edit</a>
+    </dd>
 </div>
