--- a/BerrasCinema/Views/Orders/Details.cshtml
+++ b/BerrasCinema/Views/Orders/Details.cshtml
@@ -1,13 +1,12 @@
 ﻿@model BerrasCinema.Models.Order
 
 @{
-    ViewData["Title"] = "Details";
+    ViewData["Title"] = "Your Order Details";
 }
 
-<h1>Details</h1>
+<h1>@ViewData["Title"]</h1>
 
 <div>
-    <h4>Order</h4>
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
@@ -45,6 +44,5 @@
 <div>
     <dd>
         <a class="btn btn-primary" asp-controller="Home" asp-action="Index">Back to Start</a>
-        <a class="btn btn-primary" asp-action="Edit" asp-route-id="@Model.OrderID">Edit</a>
     </dd>
 </div>
