fixes to error page

--- a/BerrasCinema/Views/Orders/Error.cshtml
+++ b/BerrasCinema/Views/Orders/Error.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Error";
 }
 <div>
-<h1>Error no seats left!</h1>
+    <h1>Error no seats left or to meny tickets purchased!</h1>
 </div>
 <div>
     <a asp-action="Index">Back to Book Tickets</a>
